--- a/javaclass.cabal
+++ b/javaclass.cabal
@@ -1,25 +1,26 @@
 name:               javaclass
 version:            0.0.1
-license:            BSD3
+license:            OtherLicense
 license-file:       LICENSE
 author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
 maintainer:         Tony Morris
-copyright:          Copyright (C) 2014 NICTA Limited
+copyright:          Copyright (C) 2016 NICTA Limited
 synopsis:           Java class files
 category:           Data
 description:
   <<http://i.imgur.com/Ns5hntl.jpg>>
   .
   Java class files
-homepage:           https://github.com/nicta/javaclass
-bug-reports:        https://github.com/nicta/javaclass/issues
+  https://docs.oracle.com/javase/specs/jvms/se7/html/jvms-4.html
+homepage:           https://github.com/NICTA/javaclass
+bug-reports:        https://github.com/NICTA/javaclass/issues
 cabal-version:      >= 1.10
 build-type:         Custom
 extra-source-files: changelog
 
 source-repository   head
   type:             git
-  location:         git@github.com:nicta/javaclass.git
+  location:         git@github.com:NICTA/javaclass.git
 
 flag                small_base
   description:      Choose the new, split-up base package.
@@ -29,12 +30,14 @@ library
                     Haskell2010
 
   build-depends:
-                    base < 5 && >= 3
-                    , semigroups >= 0.8
-                    , semigroupoids >= 4.2
-                    , lens >= 4.3.3
-                    , bytestring >= 0.10
-                    , tickle >= 0.0.2
+                    base < 5 && >= 4.8
+                    , semigroups >= 0.8 && < 1.0
+                    , semigroupoids >= 4.2 && < 6
+                    , lens >= 4.3.3 && < 5
+                    , bytestring >= 0.10 && < 0.11
+                    , tickle >= 0.0.6 && < 0.1
+                    , tagged >= 0.8 && < 0.9
+                    , greplicate >= 0.0.2 && < 0.1
                     
   ghc-options:
                     -Wall
@@ -48,7 +51,24 @@ library
 
   exposed-modules:
                     Language.Java.Class
-                    
+                    Language.Java.Class.Attribute
+                    Language.Java.Class.Attributes
+                    Language.Java.Class.Cafebabe
+                    Language.Java.Class.ClassFile
+                    Language.Java.Class.ConstantPool
+                    Language.Java.Class.ConstantPoolInfo
+                    Language.Java.Class.FieldAccessFlags
+                    Language.Java.Class.Field
+                    Language.Java.Class.Fields
+                    Language.Java.Class.Interfaces
+                    Language.Java.Class.MethodAccessFlags
+                    Language.Java.Class.Method
+                    Language.Java.Class.Methods
+                    Language.Java.Class.SuperClass
+                    Language.Java.Class.ThisAccessFlags
+                    Language.Java.Class.ThisClass
+                    Language.Java.Class.Version
+
 test-suite doctests
   type:
                     exitcode-stdio-1.0
