--- a/javaclass.cabal
+++ b/javaclass.cabal
@@ -1,6 +1,6 @@
 name:               javaclass
 version:            0.0.1
-license:            OtherLicense
+license:            BSD3
 license-file:       LICENSE
 author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
 maintainer:         Tony Morris
